--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "marimo>=0.13.4",
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "scipy>=1.15.2",
