--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "scipy>=1.15.2",
+    "watchdog>=6.0.0",
 ]
 
 [dependency-groups]
